[package]
name = "torcc-rs"
version = "0.1.0"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
description = "Tor controller client library"
categories = ["network-programming"]
keywords = ["tor", "net", "network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nom = "7.0"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
env_logger = "*"
