[package]
name = "torcc-rs"
version = "0.1.1"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"
description = "Tor controller client library"
documentation = "http://www.github.com/Anshorei/torcc-rs"
readme = "README.md"
homepage = "http://www.github.com/Anshorei/torcc"
repository = "http://www.github.com/Anshorei/torcc"
categories = ["network-programming"]
keywords = ["tor", "net", "network"]
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nom = "7.1"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.9"
